[gd_scene load_steps=5 format=3 uid="uid://cwrxmnnoqcjqo"]

[ext_resource type="Script" uid="uid://drwsnra8ipfqk" path="res://code stuff/Main/day_transition.gd" id="1_p82y8"]
[ext_resource type="FontFile" uid="uid://c886wc3wsq34a" path="res://Other/Jersey20-Regular.ttf" id="3_dljb5"]
[ext_resource type="FontFile" uid="uid://bm5o7wdxohasl" path="res://Other/Tiny5-Regular.ttf" id="3_p82y8"]

[sub_resource type="StyleBoxFlat" id="transition_bg"]
bg_color = Color(0.0392157, 0.113725, 0.180392, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.12549, 0.572549, 0.682353, 1)

[node name="DayTransition" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p82y8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.113725, 0.180392, 1)

[node name="TransitionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("transition_bg")

[node name="VBoxContainer" type="VBoxContainer" parent="TransitionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="DayCompleteLabel" type="Label" parent="TransitionPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_fonts/font = ExtResource("3_dljb5")
theme_override_font_sizes/font_size = 50
text = "Day Complete!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TransitionPanel/VBoxContainer"]
layout_mode = 2

[node name="SummaryLabel" type="Label" parent="TransitionPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.85, 0.9, 1)
theme_override_fonts/font = ExtResource("3_dljb5")
theme_override_font_sizes/font_size = 30
text = "You've finished all your actions for today."
horizontal_alignment = 1
autowrap_mode = 3

[node name="VSeparator" type="Control" parent="TransitionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="NextDayButton" type="Button" parent="TransitionPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_fonts/font = ExtResource("3_p82y8")
theme_override_font_sizes/font_size = 50
text = "Continue to Next Day"

[connection signal="pressed" from="TransitionPanel/VBoxContainer/NextDayButton" to="." method="_on_next_day_pressed"]
